--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ypalma/pupa",
+  "name": "@yerkopalma/pupa",
   "version": "1.1.0",
   "description": "Simple micro templating",
   "license": "MIT",
